// file: pkg/config/proto/responses/set_config_response.proto
edition = "2023";

package gcommon.v1.config;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/error.proto";
import "pkg/config/proto/messages/config_entry.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/config/proto;configpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * SetConfigResponse indicates the result of a configuration set operation.
 */
message SetConfigResponse {
  // Whether the operation succeeded
  bool success = 1;

  // Previous value if it existed
  ConfigEntry previous_entry = 2;

  // Error information
  gcommon.v1.common.Error error = 3;
}
