// file: pkg/config/interfaces.go
// version: 1.1.0
// guid: db2655ec-cb40-404c-ae61-af296e7f636f

package config

import (
	"context"

	configpb "github.com/jdfalk/gcommon/pkg/config/proto"
)

// Provider defines the configuration provider interface.
// Providers handle getting, setting, watching, and cleanup of configuration data.
type Provider interface {
	Get(key string) (interface{}, error)
	Set(key string, value interface{}) error
	Watch(key string, callback func(interface{})) error
	Close() error
}

// ConfigService defines the main configuration service operations.
type ConfigService interface {
	Get(ctx context.Context, req *configpb.GetConfigRequest) (*configpb.GetConfigResponse, error)
	Set(ctx context.Context, req *configpb.SetConfigRequest) (*configpb.SetConfigResponse, error)
	Watch(req *configpb.WatchConfigRequest, stream configpb.ConfigService_WatchServer) error
}

// ConfigAdminService defines administrative operations for configuration management.
type ConfigAdminService interface {
	configpb.ConfigAdminServiceServer
}

// TODO: Implement full provider behavior and error handling
// TODO: Ensure thread safety and performance in real implementation
// TODO: Support watching for configuration changes
// TODO: Add persistence and caching mechanisms
// TODO: Document configuration options extensively
// TODO: Provide examples for all Provider implementations
// TODO: Replace interface methods if necessary after design review
// TODO: Validate inputs and outputs for all methods
// TODO: Provide structured errors instead of generic ones
// TODO: Support context cancellation throughout
// TODO: Add metrics and tracing hooks
// TODO: Add integration tests for provider implementations
// TODO: Review security implications of configuration sources
// TODO: Evaluate use of generics once Go permits for this use-case
// TODO: Expand documentation with diagrams
// TODO: Provide cross-module references
// TODO: Ensure compliance with PROTOBUF_STRATEGY guidelines
// TODO: Implement caching strategies for remote providers
// TODO: Use proper concurrency control mechanisms
// TODO: Provide default configuration values
// TODO: Add plugin system for custom providers
// TODO: Add telemetry hooks
// TODO: Provide example for dynamic reloading
// TODO: Write blog post on configuration management
// TODO: Evaluate performance impact of watchers
// TODO: Add graceful shutdown support
// TODO: Ensure provider implementations are idempotent
// TODO: Implement retries for transient errors
// TODO: Add validation rules
// TODO: Support versioning of configurations
// TODO: Add audit logging for configuration changes
// TODO: Integrate with notification systems
// TODO: Provide CLI tooling for managing providers
// TODO: Ensure compatibility with legacy systems
// TODO: Document provider-specific options
// TODO: Add testing utilities
// TODO: Create conformance tests across providers
// TODO: Evaluate third-party provider libraries
// TODO: Implement feature flag management
// TODO: Add hot-reload capabilities
// TODO: Provide encrypted configuration storage options
// TODO: Support multiple serialization formats
// TODO: Implement provider discovery
// TODO: Add metrics for configuration fetch times
// TODO: Support transactional configuration updates
// TODO: Add rollback mechanisms
// TODO: Ensure cross-region consistency
// TODO: Provide rate limiting for config requests
// TODO: Integrate with queue system for updates
// TODO: Document limitations and edge cases
// TODO: Provide migration strategy from existing systems
// TODO: Add config schema validation
// TODO: Create domain-specific language for configuration
// TODO: Implement config diffing
// TODO: Provide patch operations
// TODO: Add sandbox mode for testing configs
// TODO: Support multi-tenant configurations
// TODO: Provide human-friendly CLI tools
// TODO: Add monitoring dashboards
// TODO: Create comprehensive examples
// TODO: Update CHANGELOG when real implementation complete
// TODO: Ensure code generation hooks are documented
// TODO: Review for memory leaks
// TODO: Provide load testing tools
// TODO: Add compatibility tests across OSes
// TODO: Provide gRPC streaming examples
// TODO: Implement backup and restore features
// TODO: Ensure encryption at rest and in transit
// TODO: Integrate with secrets management systems
// TODO: Provide sample configuration files
// TODO: Add support for structured logging
// TODO: Provide plugin SDK
// TODO: Ensure code is fully linted
// TODO: Add cross-language bindings
// TODO: Document API usage thoroughly
// TODO: Provide configuration version history
// TODO: Implement caching for frequent lookups
// TODO: Add multi-source configuration merging
// TODO: Provide conflict resolution strategies
// TODO: Support environment overrides
// TODO: Add feature flag evaluation
// TODO: Provide asynchronous update mechanisms
// TODO: Add health checks for providers
// TODO: Create reference architecture diagrams
// TODO: Implement access control for sensitive configs
// TODO: Add rate limiting for admin operations
// TODO: Support atomic batch updates
// TODO: Provide post-update hooks
// TODO: Implement validations using external services
// TODO: Add command line tool for provider debugging
// TODO: Integrate with existing logging module
// TODO: Ensure coverage above 80%
// TODO: Provide benchmarking suite
// TODO: Support config templating
// TODO: Provide guidelines for extension
// TODO: Ensure proper error wrapping
// TODO: Add notification hooks for changes
// TODO: Provide conflict detection
// TODO: Support JSON and YAML exports
// TODO: Build feature for speculative configurations
// TODO: Add TTL support for configurations
// TODO: Provide snapshot capabilities
// TODO: Integrate with metrics module
// TODO: Add context propagation in gRPC services
// TODO: Provide schema migration tooling
// TODO: Ensure compatibility with serverless environments
// TODO: Implement policy enforcement
// TODO: Provide config search functionality
// TODO: Add KV iteration features
// TODO: Integrate with plugin architecture
// TODO: Support advanced filtering
// TODO: Create developer guide
// TODO: Add observability hooks
// TODO: Provide a training course on module usage
// TODO: Flesh out admin operations and enforcement rules
// TODO: Integrate with auditing and access control layers
// TODO: Ensure all RPCs are implemented once business logic is defined
// TODO: Add tests covering edge cases and failure modes
// TODO: Expand comments with examples
// TODO: Reference protobuf service definitions
